# Floof-Engine

./: .gitignore  .gitmodules  BuildShaders.bat  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini.old
Assets/: IdentityCube.fbx  LowPolyCone.fbx  LowPolyCylinder.fbx  LowPolySphere.fbx  LowPolyTorus.fbx  TorusMesh.h
Assets/2020-konigsegg-jesko/source/: 2020KonigseggJesko.mtl
Assets/2020_koenigsegg_jesco/: jeskoNoWheel.gltf  license.txt  scene.gltf
Assets/LamborghiniFKP37/: 2020 Lamborghini Sián FKP 37.mtl  Lamborghini.mtl
Assets/MonsterTruck/: LPWheel.fbx  LPWheelCombined.fbx  LPWheelFixed.fbx  LPWheelFixed_Left.fbx  LPWheelFixed_right.fbx  MonsterTruckFrame.fbx  MonsterTruckFrameRotated.fbx  monsterTruckFrame.dae
Assets/Primitives/: IdentityCube.fbx  IdentityRamp.fbx
Assets/Sponza/: sponza.mtl
Assets/Wheels/ferrari-f2012-wheel/source/: Wheel_Left.fbx  Wheel_Right.fbx
Assets/Wheels/free-wheel-pack-lamborghini-sdc/source/: Lamborghinilogo.fbx  MetalRim2.fbx  Rubber1.fbx  Rubber2.fbx  blackrim.fbx  blackrim2.fbx  goldbreaks.fbx  metalRim.fbx  redbreaks.fbx
Assets/Wheels/source-2/: Chevrolet old spoke Wheel final.blend  Chevrolet old spoke Wheel final.fbx  OldSpokeWheelLeft.fbx  OldSpokeWheelRight.fbx
Assets/Wheels/tesla-cybertruck-technic-animation-studios/source/: Cybertruck_Frame.fbx  Cybertruck_WheelLeft.fbx  Cybertruck_WheelRight.fbx
Assets/Wheels/tuner-wheel/source/: tunerWheelLeft.fbx  tunerWheelRight.fbx
Assets/Wheels/work-equip-03-car-wheel/source/: WorkWheelLeft.fbx  WorkWheelRight.fbx
Assets/banana-scan-for-scale/source/: banana.gltf
Assets/banana/source/: Sketchfab_2018_12_03_21_16_43.blend
Assets/beech_tree/: scene.gltf
Assets/cyber-truck/source/: CybertruckNoWheel.fbx  CybertruckNoWheel_LowCenter.fbx
Assets/kalestra_the_sorceress/: license.txt  scene.gltf
Assets/ramp/: license.txt  scene.gltf
Assets/sakura_tree/: license.txt  scene.gltf
Assets/torii_gate/: scene.gltf
ImguiDefault/: imgui.ini
Scripts/: FixSlashScripts.py  HelloWorld.py  Script2test.py  example.py  script3test.py
Shaders/: AlphaClear.frag  AlphaClear.frag.spv  BRDF.frag  BRDF.frag.spv  BRDF.vert  BRDF.vert.spv  Basic.vert  Basic.vert.spv  Color.frag.spv  Color.vert  Color.vert.spv  Cubemap.vert.spv  EquiToCube.frag  EquiToCube.frag.spv  ForwardLit.frag  ForwardLit.frag.spv  ForwardLit.vert  ForwardLit.vert.spv  IrradianceConv.frag  IrradianceConv.frag.spv  Landscape.frag  Landscape.frag.spv  Landscape.vert  Landscape.vert.spv  Normals.frag  Normals.frag.spv  Normals.vert  Normals.vert.spv  PBR.frag  PBR.frag.spv  PBR.vert  PBR.vert.spv  PBRAlpha.frag  PBRAlpha.frag.spv  Prefilter.frag  Prefilter.frag.spv  Shadow.frag  Shadow.frag.spv  Shadow.vert  Shadow.vert.spv  (+15 more)
Source/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  CameraComponent.cpp  CameraComponent.h  CollisionDispatcher.cpp  CollisionDispatcher.h  Components.cpp  Components.h  Floof.cpp  HeightField.cpp  HeightField.h  HeightmapLoader.cpp  HeightmapLoader.h  Input.h  LasLoader.cpp  LasLoader.h  LineMeshComponent.cpp  LineMeshComponent.h  LoggerMacros.h  Math.h  ObjLoader.cpp  ObjLoader.h  Physics.cpp  Physics.h  PhysicsSystem.cpp  PhysicsSystem.h  PointLightComponent.h  Scene.cpp  Scene.h  Scripts.cpp  Scripts.h  Server.cpp  Server.h  ServerLayer.cpp  ServerLayer.h  SoundComponent.cpp  SoundComponent.h  SoundManager.cpp  (+6 more)
Source/Editor/: EditorLayer.cpp  EditorLayer.h
Source/Editor/EditorPanels/: ApplicationPanel.cpp  ApplicationPanel.h  ComponentsPanel.cpp  ComponentsPanel.h  EditorPanel.h  EnginePanel.cpp  EnginePanel.h  NetworkPanel.cpp  NetworkPanel.h  PhysicsPanel.cpp  PhysicsPanel.h  RendererPanel.cpp  RendererPanel.h  SceneGraphPanel.cpp  SceneGraphPanel.h  SoundClipPanel.cpp  SoundClipPanel.h  SoundClipsPanel.cpp  SoundClipsPanel.h  SoundSettingsPanel.cpp  SoundSettingsPanel.h  SoundSourcesPanel.cpp  SoundSourcesPanel.h
Source/Floof.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Source/GameMode/: AudioTestGM.cpp  AudioTestGM.h  GameMode.h  HeightmapTest.cpp  HeightmapTest.h  PhysicsGM.cpp  PhysicsGM.h  SponzaGM.cpp  SponzaGM.h
Source/NativeScripts/: CarBaseScript.cpp  CarBaseScript.h  CheckPointScript.cpp  CheckPointScript.h  EnvironmentSoundScript.cpp  EnvironmentSoundScript.h  GameModeScript.h  LightSwarm.cpp  LightSwarm.h  MonsterTruckScript.cpp  MonsterTruckScript.h  NativeScript.cpp  NativeScript.h  RaceTrackScript.cpp  RaceTrackScript.h  TestScript.cpp  TestScript.h  WonderBaumScript.cpp  WonderBaumScript.h
Source/NativeScripts/CarScripts/: MonsterTruckScript.cpp  MonsterTruckScript.h  RaceCarScript.cpp  RaceCarScript.h
Source/Network/: CarGameClient.h  CarGameNetworking.h  Client.h  Connection.h  FloofNetworking.h  Message.h  OlcNet.h  Queue.h  Server.cpp  Server.h  TestNetwork
Source/Renderer/: Cubemap.cpp  Cubemap.h  DeferredSceneRenderer.cpp  DeferredSceneRenderer.h  ForwardSceneRenderer.cpp  ForwardSceneRenderer.h  Framebuffer.cpp  Framebuffer.h  IBL.cpp  IBL.h  LandscapeMesh.cpp  LandscapeMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  ModelManager.cpp  ModelManager.h  SSBO.h  SceneRenderer.cpp  SceneRenderer.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Vertex.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h
xcode-build/Assets/: LowPolyCone.fbx
xcode-build/CMakeScripts/: ReRunCMake.make
xcode-build/Libs/assimp/: assimp.pc  revision.h
xcode-build/Libs/assimp/Assimp.xcodeproj/: project.pbxproj
xcode-build/Libs/assimp/CMakeScripts/: ReRunCMake.make
xcode-build/Libs/entt/: EnTTTargets.cmake  entt.pc
xcode-build/Libs/entt/CMakeScripts/: ReRunCMake.make
xcode-build/Libs/entt/EnTT.xcodeproj/: project.pbxproj
xcode-build/Libs/glfw/: cmake_uninstall.cmake
xcode-build/Libs/glfw/CMakeScripts/: ReRunCMake.make
xcode-build/Libs/openal-soft/: OpenALTargets.cmake  config.h  hrtf_default.h  openal.pc  version.h
xcode-build/Scripts/: HelloWorld.py
xcode-build/Shaders/: Color.vert.spv  ForwardLit.frag.spv  Wireframe.vert.spv
(+6 files in other folders)
